--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,5 +31,5 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m  "Update Source Code"
-          git_url = "$(git config --get remote.origin.url)"
+          echo "git_url=$(git config --get remote.origin.url)" >> $GITHUB_ENV
           git push --force --quiet $git_url ${GITHUB_REF##*/}:gh-pages
