--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,11 +25,11 @@ jobs:
           hexo generate
       - name: Git push
         run: |
+          git_url="$(git config --get remote.origin.url)"
           cd ./public
           git init
           git config --global user.name "github-actions"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m  "Update Source Code"
-          echo "git_url=$(git config --get remote.origin.url)" >> $GITHUB_ENV
-          git push --force --quiet ${{ env.git_url }} ${GITHUB_REF##*/}:gh-pages
+          git push --force --quiet $git_url ${GITHUB_REF##*/}:gh-pages
