--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,4 +32,4 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m  "Update Source Code"
-          git push --force --quiet $git_url ${GITHUB_REF##*/}:gh-pages
+          git push --force --quiet $git_url HEAD:gh-pages
