--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
           hexo generate
       - name: Git push
         run: |
-          git_url="$(git config --get remote.origin.url)"
+          git_url="https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository}}"
           cd ./public
           git init
           git config --global user.name "github-actions"
